--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "fastify-socket.io": "^4.0.0",
+    "mongodb": "^5.1.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
