--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
