--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "fastify": "^4.13.0",
     "fastify-socket.io": "^4.0.0",
     "mongodb": "^5.1.0",
-    "socket.io": "^4.6.1"
+    "nanoid": "^4.0.1",
+    "socket.io": "^4.6.1",
+    "tingodb": "^0.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
